# cursor_vibe_coding

./: .gitignore  QUICKSTART.md  README.md  env.example  frontend_example.html  pyproject.toml  requirements.txt  run.py  run.sh  test_env.py  test_milvus_connection.py  test_setup.py
app/: __init__.py  config.py  main.py  models.py
app/routers/: chat.py
app/services/: chat_service.py  milvus_service.py  openai_service.py
cursor/: cursor_instructions.txt
scripts/: ingest_sample_data.py
